@@ -99,6 +99,7 @@ WHAT IS NEW?
 
    * New Plotscripting Features
     * "dir X", "dir Y" [Ralph]
+    * "forward X", "forward Y" [Holly]
     * "heal party" (acts like an inn) [Ralph]
     * "set hero auto battle", "get hero auto battle" [James]
     * "break" and "continue" take an argument for the number of loops to break
